--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Stopwatch</title>
+    <title>Stopwatch</title>
 </head>
 <body>
-    <h1>Stopwatch</h1>
-    <div id="buttons">
+    <div class="wrapper">
+        <h1><strong>Stopwatch</strong></h1>
+        <h2>Vanilla JavaScript Stopwatch</h2>
+        <p><span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span></p>
         <button id="button-start">Start</button>
         <button id="button-stop">Stop</button>
         <button id="button-reset">Reset</button>
-    </div>
+    </div> 
 </body>
 </html>
