chamada ao arquivo JS e alterações pontuais

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stopwatch</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="index.js" defer></script>
 </head>
 <body>
     <div class="wrapper">
-        <h1><strong>Stopwatch</strong></h1>
+        <h1><strong>Pomodoro</strong></h1>
         <h2>Vanilla JavaScript Stopwatch</h2>
-        <p><span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span></p>
+        <p id="timer">25:00</p>
         <button id="button-start">Start</button>
         <button id="button-stop">Stop</button>
         <button id="button-reset">Reset</button>
-    </div> 
+    </div>
 </body>
 </html>
